--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "aws-sdk": "^2.1693.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -21,7 +21,7 @@
     "mongoose": "^9.1.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-s3": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.8.3"
   }
 }
